tdf#114384 reset the print state if the sheet changes

Change-Id: Ia90a2bae0dab3d82cae1204a9205f386f71e5c49
Reviewed-on: https://gerrit.libreoffice.org/46301
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>
(cherry picked from commit c7a2538129f16ef1253ae974737d5c9676aaf883)